# SeqGen

Clean/: CombFuncReg.cpp  CombFuncReg.h  FSR.cpp  FSR.h  FuncReg.h  main.cpp
Fast/: main.cpp
Old/: CMakeLists.txt  FSR.h  LFSR.cpp  LFSR.h  LinearCombXOR.cpp  NFSR.cpp  NFSR.h  SuperGen.cpp  cleanup.sh  main.cpp  test_all.sh
